# stuff

./: 0update_spec_version.sh  2evolution.spec  README.md  RPM-GPG-KEY-thang  _README.md  _note.md  clone_goldendict.sh  codium.spec  dictionaries.md  dictionary_links.md  error.txt  evolution-data-server.spec  evolution-ews.spec  evolution.spec  evolution1-data-server.spec  evolution2.spec  evolution3-ews.spec  evolution_ews.spec  freefilesync.spec  freefilesync_bak.spec  gas_ip_logger.js  github-desktop-plus.spec  github-desktop-plus_rpm.spec  github-desktop.spec  goldendict.spec  log.txt  ovito.spec  pdf.png~  pdf4qt.spec  pdf4qt_use_vcpkg.spec  pix2tex.spec  pyproject.toml  rebuildRPM_electerm.spec  rebuildRPM_github-desktop-plus.spec  rebuildRPM_rustdesk.spec  rpm_electerm.spec  rpm_github-desktop-plus.spec  rpm_rustdesk.spec  rssguard.spec  rssguard_202505240230.ini.backup  (+30 more)
.github/workflows/: #update_rpm_(retired).yml  regular_update_rpm.yml  update_rpm.yml  update_spec_files.yml
Akregator/: feeds.opml
config_file/: config
dictionaries/: Word Families.bgl  download_links.md
lib/: wxGTK3.spec  wxWidgets.spec
patch/: wxwidgets-image-fix.patch
patch/FreeFileSync/: 00_zen_string-traits_wxstring-support.patch  01_zen_type-traits_cstdint.patch  freefilesync_with_patch.spec
ref_old_spec/: zznotWork_evolution_entire.spec
rewebgpt/: __init__.py
rewebgpt/openai/: ChatGPTWeb.py  OpenAIAuth.py  README.md  config.py
rpms/repodata/: 036ef560bb49d327664aa77fb12d5f446575f3136968e8fef4b51ff98a3eea4d-primary.sqlite.bz2  repomd.xml  (+36 more)
workflows/: update_rpm.yml
(+1 files in other folders)
